# War-Card-Game-in-Various-Languages

./: .gitignore
Elixir War/lib/: War.ex
Elixir War/test/: war_test(new).exs  war_test.exs
Haskell War/: war.cabal
Haskell War/app/: Main.hs
Haskell War/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell War/src/: TestSuite(old).hs  TestSuite.hs  War.hs
Rust War/src/: main.rs  tests(new).rs  tests.rs
