cabal-version:          2.4
name:                   war
version:                0.1.0.0

extra-source-files:     CHANGELOG.md

library
    exposed-modules:    War

    build-depends:      base >=4.14.3.0
    hs-source-dirs:     src
    default-language:   Haskell2010

executable war
    main-is:            Main.hs

    build-depends:
        base >=4.14.3.0,
        war

    hs-source-dirs:     app
    default-language:   Haskell2010

Test-Suite war-testsuite
    type:               exitcode-stdio-1.0
    main-is:            TestSuite.hs
    other-modules:      War
    build-depends:      base,HUnit
    hs-source-dirs:     src
    default-language:   Haskell2010
